--- a/static/styles.css
+++ b/static/styles.css
@@ -7,3 +7,21 @@ button {
     height: 40px;
     width: 75px;
 }
+
+p {
+    animation-duration: 3s;
+    animation-name: slidein;
+    color: deeppink;
+  }
+  
+  @keyframes slidein {
+    from {
+      margin-left: 100%;
+      width: 300%;
+    }
+  
+    to {
+      margin-left: 0%;
+      width: 100%;
+    }
+  }
