--- a/templates/item.html
+++ b/templates/item.html
@@ -16,6 +16,30 @@
     <p id="demo">A Paragraph</p>
     <button type="button" onclick="myFunction()">Try it</button>
     <button type="button" onclick="reset()">RESET</button>
-    <button> TRASH </button>
+    <input type="button" onclick="alert('Hello World!')" value="TRASH">
+    <p>Choose your favorite Web language:</p>
+
+    <form>
+    <input type="radio" id="html" name="fav_language" value="HTML">
+    <label for="html">HTML</label><br>
+    <input type="radio" id="css" name="fav_language" value="CSS">
+    <label for="css">CSS</label><br>
+    <input type="radio" id="javascript" name="fav_language" value="JavaScript">
+    <label for="javascript">JavaScript</label>
+    </form>
+
+    <form>
+        <label for="fname">First name:</label><br>
+        <input type="text" id="fname" name="fname"><br>
+        <label for="lname">Last name:</label><br>
+        <input type="text" id="lname" name="lname">
+
+        <button type="button" onclick="get_from_input()">Go on</button>
+
+        <p1 style="color: darkgoldenrod;"> Your name: </p1>
+        <p id="fname_out" style="background-color: aquamarine; width: 80px;">_</p>
+        <p id="lname_out" style="background-color: cadetblue; width: 80px">_</p>
+    </form>
+
 </body>
 </html>
