added bootstrap page

--- a/templates/root.html
+++ b/templates/root.html
@@ -13,6 +13,7 @@
         <p><a href="https://www.google.com/">Google</a></p>
         
         <h2>Relative URLs</h2>
+        <p><a href="/main"> Main page </a></p>
         <p><a href="/items/5?q=13">/items/5 q=13</a></p>
         <p><a href="/items/189">/items/189</a></p>
     </body>
