--- a/templates/item.html
+++ b/templates/item.html
@@ -1,9 +1,9 @@
 <html>
 <head>
     <title>Item Details</title>
-    <link href="{{ url_for('static', path='/styles.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', path='/my_styles.css') }}" rel="stylesheet">
 
-    <script type="text/javascript" src="/scripts/scripts.js"></script>
+    <script type="text/javascript" src="/scripts/my_scripts.js"></script>
 
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
