--- a/templates/root.html
+++ b/templates/root.html
@@ -18,5 +18,7 @@
         <ul><li><a href="/items/5?q=15">/items/ + path and query params</a></li></ul>
         <ul><li><a href="/items/189">/items/ + path param</a></li></ul>
 
+        <h2>About me</h2>
+        <ul><li><a href="https://www.canva.com/design/DAFOXevJhyU/oyiS6vy9a9cjZAci7HOf_Q/view?utm_content=DAFOXevJhyU&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink">Резюме</a></li></ul>
     </body>
 </html>
