--- a/templates/root.html
+++ b/templates/root.html
@@ -19,6 +19,6 @@
         <ul><li><a href="/items/189">/items/ + path param</a></li></ul>
 
         <h2>About me</h2>
-        <ul><li><a href="https://www.canva.com/design/DAFOXevJhyU/oyiS6vy9a9cjZAci7HOf_Q/view?utm_content=DAFOXevJhyU&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink">Резюме</a></li></ul>
+        <ul><li><a href="https://www.canva.com/design/DAFOXevJhyU/oyiS6vy9a9cjZAci7HOf_Q/view?utm_content=DAFOXevJhyU&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink">Резюме (Нужен VPN&#128549;)</a></li></ul>
     </body>
 </html>
