added frontend for linker

--- a/templates/root.html
+++ b/templates/root.html
@@ -8,6 +8,9 @@
 
     </head>
     <body>
+        <h2>LINKER | Make your link shorter</h2>
+        <ul><li><a href="/create_link">My Linker</a></li></ul>
+
         <h2>Absolute URLs</h2>
         <ul><li><a href="http://89.108.77.24:8080">89.108.77.24:8080</a></li></ul>
         <ul><li><a href="https://www.ya.ru/">Ya</a></li></ul>
