--- a/static/my_styles.css
+++ b/static/my_styles.css
@@ -8,9 +8,19 @@ h1 {
 }
 
 button {
-    color: deeppink;
-    height: 40px;
-    width: 75px;
+  color: deeppink;
+  height: 40px;
+  width: 75px;
+  outline: none;
+  text-decoration: none;
+  display: inline-block;
+  border-radius: 25px;
+  width: 36.6%;
+  margin-right: 0.625%;
+  text-align: center;
+  line-height: 2;
+  background-color: dodgerblue;
+  color:azure ;
 }
 
 p 
@@ -32,26 +42,55 @@ li:last-child a {
   margin-right: 0;
 }
 
-a {
+h1 {
   outline: none;
   text-decoration: none;
   display: inline-block;
+  border-radius: 25px;
   width: 36.6%;
   margin-right: 0.625%;
   text-align: center;
-  line-height: 3;
+  line-height: 2;
   color: black;
+  background: rgb(0, 255, 221);
 }
 
-a:link, a:visited, a:focus {
+label {
+  outline: none;
+  text-decoration: none;
+  display: inline-block;
+  border-radius: 25px;
+  width: 20%;
+  font-size: larger;
+  margin-right: 0.625%;
+  text-align: center;
+  line-height: 2;
+  color: black;
+  background: rgb(146, 173, 224);
+}
+
+a, input{
+  outline: none;
+  text-decoration: none;
+  display: inline-block;
+  border-radius: 25px;
+  width: 36.6%;
+  margin-right: 0.625%;
+  text-align: center;
+  line-height: 2;
+  color: black;
+  font-size: large;
+}
+
+a:link, a:visited, a:focus{
   background: yellow;
 }
 
 a:hover {
-  background: orange;
+  background: rgb(255, 217, 0);
 }
 
 a:active {
-  background: red;
+  background: rgb(157, 255, 0);
   color: white;
 }
