--- a/templates/linker_output.html
+++ b/templates/linker_output.html
@@ -9,7 +9,9 @@
     </head>
     <body>
         <h2>Your link:</h2>
-        <ul><li><p> http://89.108.77.24:8080/link/{{value}}</p></li></ul>
-        <ul><li><a href="/link/{{value}}">{{value}}</a></li></ul>
+        <ul><li><p> http://89.108.77.24:8080/link?link={{value}}</p></li></ul>
+        <ul><li><a href="/link?link={{value}}">CLICK TO OPEN LINK</a></li></ul>
+        <p>You can use this URL to access your file or folder on the server.<br/>
+        <ul><li><a href="/">Back to root page</a></li></ul>
     </body>
 </html>
