--- a/templates/linker_input.html
+++ b/templates/linker_input.html
@@ -12,7 +12,7 @@
         <ul><li><h1>LINKER</h1></li></ul>
         <form>
             <label for="fname">Input your link here and press button downside</label><br>
-            <p> </p>
+            <p>(it have to start with http/s)</p>
             <input type="text" id="urlToShorten" name="fname"><br>
             <ul>
                 <button type="button" onclick="link_shorter_input()">Go on</button>
